--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,3 +27,11 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
+
+.navbar{
+  position:fixed;
+  width: 100%;
+  height: 30px;
+  background-color: aquamarine;
+  top: 0px;
+}
